# futures

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  NinjaScript Output 3_5_2026 7_33 PM.txt  NinjaTrader Grid 2026-03-05 07-33 PM.csv  README.md  Range Breakout System Refactor Pre Retrain Cleanup  Trainer UI Separation and Kraken Integration  api_server.py  app.py  cache.py  docker-compose.train.yml  docker-compose.trainer.yml  docker-compose.yml  notes.md  pyproject.toml  pyrightconfig.json  requirements.txt  research.md  run.sh  run.train.sh  todo.md  todo1.md
.claude/hooks/: session-start.sh
.github/workflows/: ci-cd.yml  ci.yml
.rustassistant/: GAMEPLAN.md  cache.json  todo-plan.json
.streamlit/: config.toml
.zed/: settings.json
config/: futures.yaml  sol.yaml
config/grafana/: grafana-dashboard.json  orb-trading-dashboard.json
config/prometheus/: alert_rules.yml  prometheus.yml
data/: futures_journal.db  gameplan_2026-02-24.md
dataset/: dataset_stats.json  val.csv
docker/: Dockerfile  entrypoint.sh
docker/base/: Dockerfile
docker/charting/: Dockerfile  entrypoint.sh  nginx.conf.template
docker/charting/static/: chart.js  index.html  style.css
docker/data/: Dockerfile  entrypoint.sh
docker/engine/: Dockerfile  entrypoint.sh
docker/futures/: Dockerfile  entrypoint.sh
docker/monitoring/: grafana-dashboard.json  prometheus.yml
docker/monitoring/grafana/: Dockerfile
docker/redis/: Dockerfile  entrypoint.sh
docker/trainer/: Dockerfile
docker/web/: Dockerfile  entrypoint.sh
docs/: STRATEGY_PLAN.md  architecture.md  backlog.md  cnn-pipeline.md  completed.md  futures_logic_flow.mmd  news.md  notes.md  rithmic_notes.md  todo.md  todo.ninjatader.md  todo1.md
docs/audit/: GAMEPLAN.md  LLM_AUDIT_REPORT.md  TODO_ANALYSIS_REPORT.md  llm-analysis.json  todo-analysis-report.json  todo-plan.json  todo-rewritten.md
models/: breakout_cnn_best.pt  breakout_cnn_best_meta.json  feature_contract.json
scripts/: backtest_filters.py  check_onnx_parity.py  daily_report.py  deploy_nt8.bat  deploy_nt8.ps1  deploy_nt8.sh  export_onnx.py  first_boot_verify.py  generate_mermaid.py  generate_mermaid_html.py  generate_sample_bars.py  incremental_dataset_build.py  migrate_git_lfs.sh  migrate_to_postgres.py  monitor_signals.py  paper_trade_start.sh  patch_breakout_strategy.py  patch_datapreloader.py  retrain_overnight.py  session_signal_audit.py  setup-pi.sh  smoke_test.sh  smoke_test_dataset.py  smoke_test_trainer.py  smoke_test_v8_training.py  sync_models.sh  test_bars_flow.py  test_bridge_live.py  train_gpu.py  trainer_server.py  verify_cicd.sh  verify_training_local.py  walk_forward_backtest.py
src/: __init__.py  alerts.py  api_server.py  app.py  cache.py  confluence.py  costs.py  engine.py  grok_helper.py  ict.py  logging_config.py  main.py  massive_client.py  models.py  monte_carlo.py  regime.py  scorer.py  signal_quality.py  strategies.py  volume_profile.py  wave.py  wave_analysis.py
src/analysis/: __init__.py  cvd.py  signal_quality.py  volatility.py  wave_analysis.py
src/api/: grok_api.py
src/core/: grok_helper.py
src/futures_lib/: __init__.py  api_server.py
src/futures_lib/analysis/: __init__.py  confluence.py  cvd.py  ict.py  monte_carlo.py  regime.py  scorer.py  signal_quality.py  volatility.py  volume_profile.py  wave_analysis.py
src/futures_lib/core/: __init__.py  alerts.py  cache.py  logging_config.py  models.py
src/futures_lib/integrations/: __init__.py  grok_helper.py  massive_client.py
src/futures_lib/trading/: __init__.py  costs.py  engine.py  strategies.py
src/indicators/: __init__.py  areas_of_interest.py  base.py  candle_patterns.py  factory.py  helpers.py  indicators.py  manager.py  market_timing.py  patterns.py  presets.py  registry.py
src/indicators/momentum/: rsi.py  stochastic.py
src/integrations/: __init__.py
src/lib/: __init__.py
src/lib/core/: base.py  (+25 more)
src/ninja/: BreakoutStrategy.cs  RubyIndicator.cs
src/ninjatrader/: BACKTEST_GUIDE.md  BreakoutStrategy.cs  Bridge.cs  BridgeOrderEngine.cs  FKS_Core.cs  FKS_CoreIndicator.cs  FKS_DynamicVolume.cs  FuturesBridge.cs  FuturesBridgeStrategy.cs  LivePositionBridge.cs  LivePositionBridgeIndicator.cs  MonitorConnection.cs  OrbCnnPredictor.cs  Ruby.cs  RubyIndicator.cs  SignalBus.cs
src/pine/: fks.pine  ruby.pine  ruby_futures.pine  ruby_futures_metrics.pine  ruby_indicator.pine
src/pinescript/: fks.pine  fks_info.pine  ruby.pine
src/services/: __init__.py  asset_registry.py  config_loader.py  redis_store.py  report_generator.py
src/tests/: conftest.py  test_alerts.py  test_analysis_signal_quality.py  test_analysis_volatility.py  test_analysis_wave.py  test_audit.py  test_backfill.py  test_breakout_types.py  test_bridge_trading.py  test_confluence.py  test_copy_trader.py  test_crypto_momentum.py  test_cvd.py  test_daily_plan.py  test_dashboard_focus_mode.py  test_data_provider_routing.py  test_data_service.py  test_first_boot_verify.py  test_focus.py  test_gold_price.py  test_grok_compact.py  test_ict.py  test_indicators_helpers.py  test_integration.py  test_kraken_training_pipeline.py  test_main_helpers.py  test_massive_client.py  test_metrics_and_ratelimit.py  test_orb.py  test_orb_filters.py  test_patterns.py  test_phase3_ema9_parity.py  test_position_manager.py  test_positions.py  test_risk.py  test_ruby_signal_engine.py  test_scheduler.py  test_sse.py  test_strategies_ict.py  test_swing_actions.py  (+4 more)
src/tradovate/: Bridge.js  Copier.js
src/web/: app.py  auth.py  main.py
static/: trading.html
tests/: conftest.py  test_alerts.py  test_audit.py  test_backfill.py  test_confluence.py  test_cvd.py  test_data_service.py  test_first_boot_verify.py  test_focus.py  test_gold_price.py  test_grok_compact.py  test_ict.py  test_integration.py  test_massive_client.py  test_metrics_and_ratelimit.py  test_orb.py  test_patterns.py  test_positions.py  test_risk.py  test_scheduler.py  test_sse.py  test_strategies_ict.py  test_volume_profile.py
todo/: WIRING.py  reddit.py  reddit.sql  reddit_sentiment.py  reddit_watcher.py  rithmic_readonly.md
(+324 files in other folders)
