[tool.poetry]
name = "sol"
version = "0.1.0"
description = "KuCoin SOLUSDTM perpetual scalper — EMA + book imbalance, Optuna auto-optimization, Discord alerts"
authors = ["nuniesmith nunie.smith01@gmail.com"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nuniesmith/sol"
homepage = "https://github.com/nuniesmith/sol"
keywords = ["crypto", "trading", "scalping", "kucoin", "sol", "optuna"]

[tool.poetry.dependencies]
python      = "^3.13"
ccxt        = "^4.5.45"
optuna      = "^4.8.0"
pandas      = "^3.0.1"
aiohttp     = "^3.13.3"       # Discord webhook HTTP calls
python-dotenv = "^1.2.2"
# Note: asyncio is stdlib — do NOT list it here

[tool.poetry.group.dev.dependencies]
ruff         = "^0.15.8"
black        = "^26.3.1"
pytest       = "^9.0.2"
pytest-asyncio = "^1.3.0"

[tool.poetry.scripts]
sol = "src.main:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nuniesmith/sol/issues"

[build-system]
requires      = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length    = 100
target-version = ["py313"]

[tool.ruff]
line-length    = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
